--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivan Loncarevic Resume</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 <h1>Ivan Loncarevic Resume</h1>
@@ -77,4 +78,5 @@ constraints.</li>
 <a href="about.html">About me</a>
 </body>
 </html>
+
 
