--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
 <h1>Ivan Loncarevic Resume</h1>
 <img src="./assets/948f1a15-1085-4605-aefb-d639732fd5ae.jpg" alt="Ivan smiling" width="200" height="400" > 
 <h2>Professional Summary</h2>
@@ -76,8 +77,10 @@ constraints.</li>
 <hr>
 <a href="contact.html">Contact me</a>
 <a href="about.html">About me</a>
+    </div>
 </body>
 </html>
+
 
 
 
