--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,11 @@
     <title>Contact page</title>
 </head>
 <body>
+    <div class="container">
     <h1>Contact Me</h1>
     <p>Feel free to reach out to me at ivan.j.loncarevic@gmail.com</p>
     <a href="index.html">Back to CV</a>
+    </div>
 </body>
+
 </html>
