--- a/about.html
+++ b/about.html
@@ -6,8 +6,11 @@
     <title>About me</title>
 </head>
 <body>
+    <div class="container">
     <h1>About Me</h1>
     <p>Dynamic professional skilled in problem-solving, customer service, and relationship building, with strong communication and conflict resolution abilities. Proficient in Microsoft Office Suite, NetSuite, and Salesforce, and currently expanding technical skills by learning Front-End and Back-End development (HTML completed) to become a Full Stack Developer.</p>
     <a href="index.html">Back to CV</a>
+    </div>
 </body>
+
 </html>
